Layout bug fixes

--- a/css/styles.css
+++ b/css/styles.css
@@ -170,7 +170,8 @@ body {
     border-right: 1px solid #252525;
     display: flex;
     flex-direction: column;
-    /* position: fixed; */
+    position: fixed;
+    height: 100vh;
   }
 
   .Desktop-items-container {
@@ -204,6 +205,7 @@ body {
   .Desktop-layout-container {
     display: flex;
     height: 120vh;
+    padding-left: 25%;
   }
 
   .Desktop-layout-container-content {
@@ -213,7 +215,7 @@ body {
     align-items: center;
   }
 
-  .Cards-containerr--containerr-desktop {
+  .Cards-container-container-desktop {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -225,6 +227,7 @@ body {
     justify-content: center;
     align-items: center;
     width: 80%;
+    content-visibility: auto;
   }
 
   .Page-title-container {
@@ -234,10 +237,14 @@ body {
     margin-bottom: 2rem;
   }
 
+  .Page-title {
+    margin-bottom: 0.5rem;
+  }
+
   .Card-container {
     margin: 2rem;
-    width: 40%;
-    height: 30rem;
+    width: 35%;
+    /* height: 30rem; */
     /* border: 1px solid #252525; */
     border-radius: 1rem;
   }
@@ -251,6 +258,7 @@ body {
     display: flex;
     justify-content: space-around;
     margin-top: 30px;
+    margin-bottom: 30px;
   }
   .Footer-Desktop {
     /* display: flex; */
